# pdf-manager

./: .env  .gitignore  PLANNING.md  README.md  dev.py  main.py  pyproject.toml  test_fastapi_upload.py
adapters/inbound/: agent_routes.py  pdf_routes.py
adapters/outbound/: supabase_auth.py  supabase_client.py  supabase_db.py  supabase_storage.py
agent/: react_agent.py
core/: config.py  logger.py  security.py
core/domain/: pdf_operations.py
core/ports/: auth.py  database.py  storage.py
core/services/: pdf_service.py
di/: container.py
